--- a/homepage/src/layouts/Layout.astro
+++ b/homepage/src/layouts/Layout.astro
@@ -10,7 +10,10 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta
+      name="description"
+      content="Backstein kann mit allem gespielt werden, außer Bäller."
+    />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
