--- a/homepage/src/components/Rules.astro
+++ b/homepage/src/components/Rules.astro
@@ -24,43 +24,42 @@
             <strong class="font-semibold text-gray-900"
               >Spielvorbereitung</strong
             >
-            Ein Backstein pro Spiel: Jeder Spieler verfügt über einen eigenen Backstein.
-            Spielfelddefinition: Das Spielfeld wird durch den Raum um den Backstein
-            definiert. Es gibt keine festen Linien oder Begrenzungen.</span
+            In jedem Spiel existiert lediglich ein einzelner Backstein, den alle
+            Teilnehmer abwechselnd nutzen. Das Spielfeld wird durch den Raum um den
+            Backstein definiert. Es gibt keine festen Linien oder Begrenzungen.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
           <span class="flex-col flex">
             <strong class="font-semibold text-gray-900">Ziel des Spiels</strong>
-            Dumm dastehen: Das Ziel von Backstein bleibt unverändert - den gegnerischen
-            Backstein in eine Position zu bringen, die als "dumm dastehen" bezeichnet
-            wird.</span
+            Das Ziel von Backstein besteht darin, den vom Gegner gespielten Backstein
+            in eine Position zu bringen, die als "dumm dastehen" bezeichnet wird.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
           <span class="flex-col flex">
             <strong class="font-semibold text-gray-900">Spielablauf</strong>
-            Abwechselnd: Die Spieler führen abwechselnd ihre Züge durch, indem sie
-            ihren Backstein im Raum bewegen. Bewegungsfreiheit: Der Backstein kann
-            sich horizontal, vertikal oder diagonal bewegen, wobei die Bewegung auf
-            den verfügbaren Raum um den Backstein beschränkt ist.</span
+            Die Spieler führen abwechselnd ihre Züge durch, indem sie ihren Backstein
+            im Raum bewegen. Der Backstein kann sich horizontal, vertikal oder diagonal
+            bewegen, wobei die Bewegung auf den verfügbaren Raum um den Backstein
+            beschränkt ist.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
           <span class="flex-col flex">
             <strong class="font-semibold text-gray-900">Angriffe</strong>
-            Taktische Züge: Ein Spieler kann den gegnerischen Backstein durch geschickte
-            Bewegungen angreifen und in eine ungünstige Position bringen. Gegenangriffe:
-            Spieler können durch kluge Verteidigungsmanöver auf Angriffe reagieren
-            und ihren eigenen Backstein schützen.</span
+            Ein Spieler kann den gegnerischen Backstein durch geschickte Bewegungen
+            angreifen und in eine ungünstige Position bringen. Durch kluge Verteidigungsmanöver
+            kann auf Angriffe reagiert werden und der eigene Backstein geschützt
+            werden.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
           <span class="flex-col flex">
             <strong class="font-semibold text-gray-900">Spielvarianten</strong>
-            Backsteinarten: Unterschiedliche Backsteinvarianten können eingeführt
-            werden, um dem Spiel mehr Tiefe zu verleihen. Diese können einzigartige
-            Fähigkeiten oder spezielle Bewegungsmuster haben.</span
+            Unterschiedliche Backsteinvarianten können eingeführt werden, um dem
+            Spiel mehr Tiefe zu verleihen. Diese können einzigartige Fähigkeiten
+            oder spezielle Bewegungsmuster haben.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
@@ -68,10 +67,10 @@
             <strong class="font-semibold text-gray-900"
               >Strafen und Belohnungen</strong
             >
-            Regelverstöße: Bei Regelverstößen oder unfairem Spielverhalten können
-            Strafen verhängt werden, die den Spielverlauf beeinflussen. Belohnungen:
-            Besondere Züge oder taktische Meisterleistungen können durch Belohnungen
-            wie zusätzliche Züge oder erweiterte Bewegungsfreiheit honoriert werden.</span
+            Bei Regelverstößen oder unfairem Spielverhalten können Strafen verhängt
+            werden, die den Spielverlauf beeinflussen. Besondere Züge oder taktische
+            Meisterleistungen können durch Belohnungen wie zusätzliche Züge oder
+            erweiterte Bewegungsfreiheit honoriert werden.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
@@ -79,11 +78,11 @@
             <strong class="font-semibold text-gray-900"
               >Backsteinvereine und Turniere</strong
             >
-            Mitgliedschaft: Spieler können Mitglieder von Backsteinvereinen werden,
-            um an exklusiven Veranstaltungen teilzunehmen und ihre Fähigkeiten zu
-            verbessern. Turniere: Backsteinturniere werden auf verschiedenen Ebenen
-            organisiert, von lokalen Veranstaltungen bis zu internationalen Meisterschaften.
-            Der Backsteinweltmeister wird in einem hochkarätigen Turnier ermittelt.</span
+            Spieler können Mitglieder von Backsteinvereinen werden, um an exklusiven
+            Veranstaltungen teilzunehmen und ihre Fähigkeiten zu verbessern. Backsteinturniere
+            werden auf verschiedenen Ebenen organisiert, von lokalen Veranstaltungen
+            bis zu internationalen Meisterschaften. Der Backsteinweltmeister wird
+            in einem hochkarätigen Turnier ermittelt.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
@@ -91,9 +90,9 @@
             <strong class="font-semibold text-gray-900"
               >Kulturelle Bedeutung</strong
             >
-            Traditionen und Rituale: Backstein hat im Laufe der Zeit eine tiefe kulturelle
-            Bedeutung entwickelt. Spieler und Fans können spezielle Rituale oder
-            Traditionen pflegen, um ihre Verbundenheit mit dem Spiel auszudrücken.</span
+            Backstein hat im Laufe der Zeit eine tiefe kulturelle Bedeutung entwickelt.
+            Spieler und Fans können spezielle Rituale oder Traditionen pflegen, um
+            ihre Verbundenheit mit dem Spiel auszudrücken.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
@@ -101,10 +100,9 @@
             <strong class="font-semibold text-gray-900"
               >Weltmeister und Ranglisten</strong
             >
-            Titelverteidigung: Der amtierende Backsteinweltmeister hat die Aufgabe,
-            seinen Titel in speziellen Wettkämpfen zu verteidigen. Ranglisten: Es
-            gibt offizielle Ranglisten, die die besten Backsteinspieler der Welt
-            nach ihrer Leistung bewerten.</span
+            Der amtierende Backsteinweltmeister hat die Aufgabe, seinen Titel in
+            speziellen Wettkämpfen zu verteidigen. Es gibt offizielle Ranglisten,
+            die die besten Backsteinspieler der Welt nach ihrer Leistung bewerten.</span
           >
         </li>
         <li class="flex gap-x-3 pl-6">
@@ -112,9 +110,8 @@
             <strong class="font-semibold text-gray-900"
               >Sonstige Bestimmungen</strong
             >
-            Bälle sind verboten: Im Sinne der Tradition und des einzigartigen Charakters
-            von Backstein ist die Verwendung von Bällen als Spielgerät ausdrücklich
-            untersagt.</span
+            Im Sinne der Tradition und des einzigartigen Charakters von Backstein
+            ist die Verwendung von Bällen als Spielgerät ausdrücklich untersagt.</span
           >
         </li>
       </ul>
